# beastiary

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test.db  todo.md
.github/: dependabot.yml
backend/: PYPI-README.md  pyproject.toml
backend/beastiary/: cli.py  log.py  main.py
backend/beastiary/api/: __init__.py  core.py  main.py
backend/beastiary/crud/: __init__.py  base.py  crud_sample.py  crud_trace.py  crud_tree.py
backend/beastiary/db/: base.py  database.py  init_db.py
backend/beastiary/models/: sample.py  trace.py
backend/beastiary/schemas/: __init__.py  sample.py  trace.py  trace_sample.py  tree.py  tree_sample.py
backend/beastiary/webapp-dist/: index.html  manifest.json  precache-manifest.00d3153202cc61ced42196d533228262.js  precache-manifest.0d4960c2a4bb2275bad476034cd3ba56.js  precache-manifest.108f22cc4a645f3a4368ebda0f438813.js  precache-manifest.1621d47fb48885dc3db6c4df03b418a9.js  precache-manifest.164ae56c48d06d0522ad83d95bbdba62.js  precache-manifest.17317f514f7278a37554b3d83f96538f.js  precache-manifest.1d3d6fea9a7240c3f16030f6c6db4817.js  precache-manifest.1f3c51b9fb288d665b8d1a07228f0b8e.js  precache-manifest.228f0ce48a241576e4e39b87bf803a09.js  precache-manifest.289674bb2320136e066e6a61f5390055.js  precache-manifest.2f15dd6588b98adf8573d1407c0055b5.js  precache-manifest.3c0ac0d869f9b88e48d376ce999b3ecf.js  precache-manifest.3e2c84abe16ba299a0ecc861e2447a1e.js  precache-manifest.3ec687b1852a7aabc79c78a1bfe0047b.js  precache-manifest.40373288ec7dccc83dd788481652f31e.js  precache-manifest.42a35f93da733dbd82ff7b69a202f58f.js  precache-manifest.49c9dd76be0fe577b74cfcc6396b866d.js  precache-manifest.51a7127178890587a08f8a0dcc747654.js  precache-manifest.520b73afb0cd4e789319222d08823702.js  precache-manifest.58d2f2aa391ba058848a8521d9a832f4.js  precache-manifest.6f69a096e981930698c48ef34381925a.js  precache-manifest.6fda840674d82f496cae23b70f049cd3.js  precache-manifest.70ddcc35bcf88834d22c9e33b3cd5678.js  precache-manifest.745dce527370476fe4c17062d648d53b.js  precache-manifest.773cd8d6fe83c70114ed764f24c37700.js  precache-manifest.7747f85e1c6c55f7d9df52fb5be2cd67.js  precache-manifest.80973dd49a66967c0d5e099f3656378a.js  precache-manifest.8174933c0f14872d0ddcf4c732fb1156.js  (+27 more)
backend/tests/: test_beastiary.py
(+586 files in other folders)
