[tool.poetry]
name = "beastiary"
version = "0.5.0"
description = ""
authors = ["Wytamma Wirth <wytamma.wirth@me.com>"]
readme = "PYPI-README.md"

[tool.poetry.scripts]
beastiary = "beastiary.main:app"

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
typer = {extras = ["all"], version = "^0.3.2"}
fastapi = {extras = ["all"], version = "^0.67.0"}
aiofiles = "<0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mkdocs-material = "^7.2.0"
black = "^21.7b0"
pytest-cov = "^2.12.1"
pre-commit = "^2.13.0"
SQLAlchemy = "^1.4.22"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
